Implement main announcement

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Responsive meta tag -->
+    <meta name="viewport"
+          content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
+
+    <!-- Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/jejumyeongjo.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Parisienne&display=swap">
+
     <!--<title>Wedding Announcement of Hanter and Suji</title>-->
     <title>한터 ♥ 수지</title>
   </head>
