--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
           content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
 
     <!-- Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/jejumyeongjo.css" />
+    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/jejumyeongjo.css" />-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Parisienne&display=swap">
 
     <!--<title>Wedding Announcement of Hanter and Suji</title>-->
