--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <meta property="og:description" content="결혼합니다!">
     <meta property="og:image" content="https://i.imgur.com/JGRyiF9.jpg">
 
-    <!--<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />-->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#e9967a" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
