--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <title>한터 ♥ 수지</title>
   </head>
   <body>
-    <noscript>JavaScript를 실행시켜주세요</noscript>
+    <noscript>JavaScript를 실행시켜주세요.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
