--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+
     <!-- linkbox -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://junghanter.github.io/wedding/">
     <meta property="og:title" content="한터♥수지">
-    <meta property="og:description" content="결혼합니다!">
+    <meta property="og:description" content="우리 결혼합니다!">
     <meta property="og:image" content="https://i.imgur.com/JGRyiF9.jpg">
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
